// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates a hex representation of a color in #AARRGGBB 1`] = `
.c0 {
  argb: #805a1794;
  argb: #805a1794;
}

<div
  className="c0"
  r={90}
/>
`;

exports[`Creates an opaque color object from decimal red, green and blue (RGB) values. 1`] = `
.c0 {
  rgb: #5a8120ff;
  rgba: #5a812080;
  rgb: #5a8120ff;
  rgba: #5a812080;
  rgb: #5a8120ff;
  rgba: #5a812080;
  rgb: #5a8120ff;
  rgba: #5a812080;
  rgb: #ffffffff;
}

<div
  className="c0"
  r={90}
/>
`;

exports[`Creates an opaque color object from hue, saturation and lightness (HSL) values. 1`] = `
.c0 {
  hsl: #80ff00ff;
  hsl1: #80ff00ff;
  new: #e6f1daff;
  hsla: #80ff0080;
  hsla: #80ff0080;
}

<div
  className="c0"
/>
`;

exports[`Creates an opaque color object from hue, saturation and value (HSV) values. 1`] = `
.c0 {
  hsv1: #408000ff;
  hsv2: #408000ff;
  hsva1: #40800080;
  hsva2: #40800080;
}

<div
  className="c0"
/>
`;

exports[`Extracts the hue channel of a color object in the HSL color space. 1`] = `
.c0 {
  hue: 90;
  hue: 90;
  hue: 90;
  hue: 90;
}

<div
  className="c0"
  color="#80ff00"
/>
`;

exports[`Extracts the hue channel of a color object in the HSV color space. 1`] = `
.c0 {
  hsvhue: 90;
  hsvhue: 90;
  hsvhue: 90;
  hsvhue: 90;
}

<div
  className="c0"
  color="#80ff00"
/>
`;

exports[`Extracts the lightness  channel of a color object in the HSL color space. 1`] = `
.c0 {
  lightness: 50%;
  lightness: 50%;
  lightness: 50%;
  lightness: 50%;
  lightness: 50%;
}

<div
  className="c0"
  color="#80ff00"
/>
`;

exports[`Extracts the saturation channel of a color object in the HSL color space. 1`] = `
.c0 {
  saturation: 100%;
  saturation: 100%;
  saturation: 100%;
  saturation: 100%;
  saturation: 50%;
}

<div
  className="c0"
  color="#80ff00"
/>
`;

exports[`Extracts the saturation channel of a color object in the HSV color space. 1`] = `
.c0 {
  hsvsaturation: 100%;
  hsvsaturation: 100%;
  hsvsaturation: 100%;
  hsvsaturation: 100%;
  hsvsaturation: 50%;
}

<div
  className="c0"
  color="#80ff00"
/>
`;

exports[`Extracts the value channel of a color object in the HSV color space. 1`] = `
.c0 {
  hsvvalue: 50%;
  hsvvalue: 50%;
  hsvvalue: 50%;
  hsvvalue: 50%;
  hsvvalue: 50%;
}

<div
  className="c0"
  color="#408000"
/>
`;
